fix: Align download button in center

--- a/packages/app-accounts/src/index.css
+++ b/packages/app-accounts/src/index.css
@@ -46,7 +46,7 @@
 }
 
 .accounts--flex-item-file {
-  margin-left: 8em;
+  margin-left: 9em;
   padding-top: 1em;
   padding-bottom: 1em;
 }
